# Messenger-Server

./: .gitignore  CMakeLists.txt  README.md  json-instructions.txt  main.cpp  resource.qrc  server.ui
Server/: Server.pro  database.cpp  database.hpp  encryption.cpp  main.cpp  server.cpp  server.hpp  server.ui  serverback.cpp  serverback.hpp
build-Server-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  Server  moc_server.cpp  moc_serverback.cpp  moc_widget.cpp  ui_server.h
include/: database.hpp  server.hpp  serverback.hpp
instructions/: RSA.txt  json.txt
src/: database.cpp  encryption.cpp  server.cpp  serverback.cpp
tools/: messenger.sh
